# PineScriptCooker

./: .gitignore  CMakeLists.txt  Compiler.cpp  Compiler.h  CompilerCommon.h  DataSource.cpp  DataSource.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  PineVM.cpp  PineVM.h  README.md  VMCommon.cpp  VMCommon.h  VMFunc.cpp  duckdb.hpp  duckdb.lib  main.cpp
DataSource/: CSVDataSource.cpp  CSVDataSource.h  JsonDataSource.cpp  JsonDataSource.h
EasyLanguage/: EasyLanguageAST.h  EasyLanguageCompiler.cpp  EasyLanguageCompiler.h  EasyLanguageLexer.cpp  EasyLanguageLexer.h  EasyLanguageParser.cpp  EasyLanguageParser.h
Hithink/: HithinkAST.h  HithinkCompiler.cpp  HithinkCompiler.h  HithinkLexer.cpp  HithinkLexer.h  HithinkParser.cpp  HithinkParser.h
PineScript/: PineAST.h  PineCompiler.cpp  PineCompiler.h  PineLexer.cpp  PineLexer.h  PineParser.cpp  PineParser.h
bind/java/: CMakeLists.txt  Main.java  jniexport.cpp
bind/java/com/pinevm/: HithinkCompiler.java  PineVM.java
bind/js/: CMakelists.txt  Compiling  Creating  Makefile  bindings.cpp  buid.sh  build.bat  build.sh  clean.bat  clean.sh  index.html  index.js  main.cpp  main.js  pine_vm.js  pine_vm.wasm  run_server.py  style.css
bind/js/public/: pine_vm.js  pine_vm.wasm  pine_vm.wasm.map
bind/python/: bindings.cpp  example.py  install.sh  pyproject.toml  setup.cfg  setup.py
bind/python/pine_vm/: __init__.py  pine_vm_core.cp311-win_amd64.pyd
db/: aapl.json  amzn.json  result.csv  tsla.json
front/: PineVM.wasm  jsvm.html  pinevm.js  pinevm_wasm.js  pinevm_wasm.wasm  show-v1.html  show.html
tests/: main_test.cpp
